///CHANGELOG///

--------------
---1.45
--------------

- Fixed an issue where z64rom actor.toml could not be loaded with certain directory names

- Fixed an issue where hirearchy was mispelled as hirearchy in SO code, which made this property not load from z64rom actor.toml files

- Fixed an issue where Yoffset could not be negative in actor rendering

- Fixed an issue where SO would crash when clicking various buttons with no collision loaded

--------------
---1.44
--------------

- Billboards and 2D billboards are now rendered inside SO viewport

- Updated MM actor xml, thanks doncamilo!

- Fixed an issue where actor.toml properties in z64rom projects wasnt working

- Fixed an issue where SO would sometimes fail to warn the user about incorrect numeric tag usage

- Added extra tooltip on billboard and 2D billboard checkboxes explaining how to use them

--------------
---1.43
--------------

- Added #Tint mesh tag (wasn't present due an oversight)

- Command D9 (Geometry Mode) can now be customized via UI when clicking Customize button in group settings

- Fixed an issue where vanilla modified actors in z64rom would appear twice in the actor database

- Fixed an issue where scene names where not correctly displayed in cutscene editor


--------------
---1.42
--------------

- Added options to build and launch z64rom when in z64rom mode. [Beta] There's an additional one to warp Link directly on the scene you're editing, skiping titlescreen.

- Entrance table editor now support z64rom, they will automatically open the .toml files in z64rom mode, and can also export tables to .toml format

- Added "Save to binary" options in entrance table editor and cutscene table editor

- Fixed an issue where opening rom 2 times without closing cutscene table editor would prompt an error

- Fixed an issue with the starting room time when importing old scenes

- Fixed an issue where the time of all rooms would be set to 0 if atleast 1 room had global time enabled
